# kakao_mcp_checktime

./: .dockerignore  Dockerfile  README.md  pyproject.toml
config/: deployment.env.example
data/: disclaimers.json  expert_review_points.json  timeline_rules.json  transaction_types.json  user_roles.json
data/checklists/: home_purchase_buyer.json  lease_jeonse_tenant.json  lease_monthly_tenant.json
data/documents/: home_purchase_buyer.json  lease_jeonse_tenant.json  lease_monthly_tenant.json
docs/: DEPLOYMENT_NOTES.md  IMPLEMENTATION_NOTES.md  PLAYMCP_CONSOLE_ASSETS.md  PLAYMCP_PRECHECK.md  PLAYMCP_REGISTRATION_FIELDS.md  TROUBLESHOOTING.md
scripts/: generate_playmcp_assets.py  grep_risk_terms.sh  run_fixtures.py  smoke_http_server.py  smoke_mcp_adapter.py
src/checktime_mcp/: case_builder.py  data_loader.py  guardrails.py  health.py  mcp_adapter.py  mcp_server.py  response_policy.py  runtime_config.py  schemas.py  server.py  tools.py
tests/: test_case_builder.py  test_data_loader.py  test_guardrails.py  test_mcp_adapter.py  test_mcp_server_smoke.py  test_tools.py
tests/fixtures/: scenario_calendar_items.json  scenario_expert_review.json  scenario_jeonse_pre_contract.json  scenario_monthly_documents.json  scenario_purchase_timeline.json  scenario_today_tasks.json
