[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "checktime-mcp"
version = "0.1.0"
description = "Minimal local tool server for Real Estate CheckTime MCP"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
checktime-mcp = "checktime_mcp.server:main"
checktime-mcp-mcp = "checktime_mcp.mcp_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
